[project]
name = "end2endragsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.33.0",
    "faiss-cpu==1.9.0.post1",
    "langchain==0.2.11",
    "langchain-community==0.2.10",
    "langchain-huggingface==0.0.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "pypdf==4.3.1",
    "pypdfium2==4.30.0",
    "pytesseract==0.3.13",
    "pytest==8.3.2",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.0.1",
    "streamlit==1.35.0",
    "torch>=2.11.0",
    "transformers==4.43.3",
]
